--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -31,7 +31,7 @@
             <span class="version"><?=Default_Model_HtmlPurify::purify($this->product['version'])?>
             </span>
         </a>
-        <span style="display: block; margin-bottom: 5px"><?=$this->fetchCategoriesForProductAsString($this->product['project_id'])?></span>
+        <span style="display: block; margin-bottom: 5px"><?=$this->product['cat_title']?></span>
         
        
         <div class="productInfo">
