--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5514,6 +5514,7 @@ img.imgpopover
 
 /*aboutme tab comments*/
 #my-comments-tabs-content {
+  font-size: 10pt;
   .rownomargin
   {
     margin:0;
@@ -5530,7 +5531,44 @@ img.imgpopover
   .createat
   {
     font-size: smaller;
+    padding-left: 20px;
   }
+  .productrow
+       {
+         padding-bottom: 5px;
+         padding-top: 5px;
+         border-bottom: 1px solid #ccd4d8;
+         width: 60%;
+     }
+   .productrow:last-child {
+               border-bottom: none;
+           }   
+      .row
+      {
+        margin-top: 10px;
+      }
+      .rating
+      {
+            width: 60px;
+      }
+      .time
+      {
+            font-size: smaller;
+      }
+    .cntComments
+       {
+          font-size: smaller;
+       
+      }
+      .productimg
+          {
+              width:50px;
+              height:50px;
+          }
+      .commenttext{
+        padding-left: 35px;
+        padding-top: 20px;
+      }
 }
 
 .user-admin-page 
