--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -27,7 +27,7 @@ $this->tab = 'products';
 <link href="/theme/flatui/css/chosen.css" media="screen" rel="stylesheet" type="text/css" />
 <style type="text/css">
     div.datafiledroparea{
-        overflow: scroll !important;
+        overflow-y: scroll !important;
     }
 </style>
 <main class="user-admin-page">
