--- a/application/modules/default/views/scripts/support/index.phtml
+++ b/application/modules/default/views/scripts/support/index.phtml
@@ -437,10 +437,10 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
             <div class="row">
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
-                    <h2>Please help us</h2>
-                    <p>Since 2017 we support the creatives on our platform via <a id="plingListOpen" href="#">pling</a>.
+                    <h2>Become a supporter</h2>
+                    <p>Help us support the creatives on our platform via <a id="plingListOpen" href="#">pling</a>.
                     </p>
-                    <p>Please help us to support the creators and keep the platform growing. Your support is a one time donation and last for a full year.</p>
+                    <p>Your donation supports all creators and keeps the platform growing. Via one time donation that last a full year.</p>
                     
                     <div class="tabs donation-widget ">
                     
