--- a/application/modules/default/views/scripts/support/index.phtml
+++ b/application/modules/default/views/scripts/support/index.phtml
@@ -437,10 +437,10 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
             <div class="row">
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
-                    <h2>Become a supporter</h2>
+                    <h2>Become a Supporter</h2>
                     <p>Help us support the creatives on our platform via <a id="plingListOpen" href="#">pling</a>.
                     </p>
-                    <p>Your donation supports all creators and keeps the platform growing. Via one time donation that last a full year.</p>
+                    <p>Your donation supports all creators and keeps the platform growing via a one time donation that lasts a full year.</p>
                     
                     <div class="tabs donation-widget ">
                     
@@ -452,7 +452,7 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
                                 <div class="tabs-header non-selectable basic-color-background">
                                   <div class="header-content">
                                     <span class="display-amount">
-                                      <span class="step-1 active">Choose amount</span>
+                                      <span class="step-1 active">Choose amount for a year</span>
                                     </span>
                                   </div>
                                 </div>
