--- a/application/modules/default/views/scripts/support/index.phtml
+++ b/application/modules/default/views/scripts/support/index.phtml
@@ -438,9 +438,9 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
                     <h2>Become a Supporter</h2>
-                    <p>Help us support the creatives on our platform via <a id="plingListOpen" href="#">pling</a>.
+                    <p>Help us support the creatives on our platform to keep it growing.
                     </p>
-                    <p>Your donation supports all creators and keeps the platform growing via a one time donation that lasts a full year.</p>
+                    <p>Your donation supports all creators via a one time donation that lasts a full year.</p>
                     
                     <div class="tabs donation-widget ">
                     
