--- a/application/modules/default/views/layout/home_template.phtml
+++ b/application/modules/default/views/layout/home_template.phtml
@@ -33,7 +33,9 @@
     <!-- Loading Bootstrap -->
     <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
     <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />    
-
+    <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css" />
+    <link rel="stylesheet" type="text/css" href="/theme/flatui/css/tooltipster-light-customized.css" />
     <!-- custom styles -->   
     <link href="/theme/flatui/css/style.css" rel="stylesheet">
     <link href="/theme/flatui/css/stylesheet.css?<?= APPLICATION_VERSION ?>" rel="stylesheet">
@@ -42,6 +44,7 @@
     <!-- third party -->
     <link href="/theme/flatui/css/fontawsome/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="/theme/flatui/js/lib/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
 </head>
 <body>
 <?php echo $this->render('partials/header/template.phtml'); ?>
