--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -36,7 +36,7 @@ $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384"
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
 $countSupporters = $modelInfo->getCountActiveSupporters();
-$countMembers = $modelInfo->getCountMembers();
+//$countMembers = $modelInfo->getCountMembers();
 
 $helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helperImage = new Default_View_Helper_Image();
@@ -57,16 +57,13 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                                             "catIDs" =>"366"
                                         )
                                     );       
-                                    //366
-
-
+                                 
                                     echo $this->partial('/home/partials/product_group.phtml', array(
                                             "title"  => "KDE Plasma",
                                             "products" => $this->productsThemesPlasma,
                                             "catIDs" =>"365"   
                                         )
-                                    );       
-                                    // 365                          
+                                    );                                       
                         ?>                                                      
                         </div>
 
@@ -78,16 +75,13 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                                             "catIDs" =>"147"   
                                         )
                                     );       
-                                    //147
-
+                                    
                                     echo $this->partial('/home/partials/product_group.phtml', array(
                                             "title"  => "Icons, Cursors",
                                             "products" => $this->productsIconsCursors,
                                             "catIDs" =>"386,107"   
                                         )
-                                    );           
-                                    // 386     107
-
+                                    );                                           
                         ?>                                                                                                                        
                         </div>
 
@@ -106,8 +100,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                                             "catIDs" =>"295"   
 
                                         )
-                                    );       
-                                    //295
+                                    );                                        
                         ?>                                                                                                          
                         </div>
                         <div class="row blockpadding" >
@@ -118,15 +111,14 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                                              "catIDs" =>"152"   
                                          )
                                      );       
-                                     //152
-
+                                
                                      echo $this->partial('/home/partials/product_group.phtml', array(
                                              "title"  => "Applications",
                                              "products" => $this->productsApps,
                                              "catIDs" =>"233"   
                                          )
                                      );      
-                                     //233                           
+                                                        
                          ?>                                         
                         </div>
 
@@ -166,7 +158,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                 $identity = Zend_Auth::getInstance()->getIdentity();
                 if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
         ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Help to support the artists<br/>and keep the content free</a>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
         <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
         <?php   }?>
@@ -177,6 +169,17 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
         <span style="display: block"><?php /*number_format($countMembers, 0, '.', ',');*/?>
         those who support freedom
          </span>
+         <div class="row">
+            <?php 
+                    $i=0;
+                   foreach ($this->supporters as $user) {                                                      
+                    if($i++>6) break;
+               ?>         
+               <a href="<?php echo $this->buildMemberUrl($user['member_id']); ?>" class="tooltipuserleft" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>">                   
+                    <img src="<?php echo $this->Image($user['profile_image_url'], array('width' => '25', 'height' => '25', 'crop' => 2)); ?>" class="supporterx" />                   
+               </a>
+               <?php } ?>
+         </div>
         </div>
 
         <div  class="row sidebar-right-info" >                                
@@ -190,15 +193,23 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                     echo $this->render('explore/partials/comment.phtml');
                 }
                 ?>
+
             </div>          
         </aside>
 </div>
 </div>
 
+<div class="tooltip_templates" style="display: none">
+    <span id="tooltip_content">
+        <i class="fa fa-spinner"></i>
+    </span>
+</div>
 </main>
 
 <?php $this->inlineScript()->appendScript(
     '    $(document).ready(function(){                               
-                RssNews.setup();                  
+                RssNews.setup();   
+                TooltipUser.setup("tooltipuser","right");
+                TooltipUser.setup("tooltipuserleft","left");             
             });
         ');
