--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -60,6 +60,10 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
+                img.supporterx{
+                	width: 25px;
+                	height: 25px;
+                }
                 
 	}
 
