Fix for exclamation marks in ppload_collection_id

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -50,10 +50,8 @@
                         </div>
                      </div>
 
-                     <?php /*FIXME: https://github.com/pling-us/pling-tickets/issues/295 */ ?>
                      <div data-ppload-api-uri="<?= PPLOAD_API_URI ?>"
-                          
-                          data-ppload-collection-id="<?= ltrim($this->product->ppload_collection_id, '!') ?>"
+                          data-ppload-collection-id="<?= $this->product->ppload_collection_id ?>"
                           data-xdg-type="<?= $xdgType ?>">
 
                          <!--
@@ -99,9 +97,8 @@
 
 
              <div class="item active" style="max-width: 800px; max-height: 550px; margin:0 auto; display: none" id="carouselPPlay">
-                    <?php /*FIXME: https://github.com/pling-us/pling-tickets/issues/295 */ ?>
                     <div data-ppload-api-uri="<?= PPLOAD_API_URI ?>"
-                          data-ppload-collection-id="<?= ltrim($this->product->ppload_collection_id, '!') ?>">
+                          data-ppload-collection-id="<?= $this->product->ppload_collection_id ?>">
 
                           <iframe src="" width="0" height="0" frameborder="0" id="pplayiframe"
                                  data-pling-music-uri="/pling-music-html5/embed.html"
