--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -311,7 +311,7 @@ $categoryPath[] = $valueCatId;
 
 
                         <?php if(isset($this->project_id)) { ?>
-                            <h3>Changlog</h3>
+                            <h3>Changelog</h3>
                             <section id="changlog">
 
                                     <div id="modal-changlog" data-product-id="">
