--- a/application/modules/default/views/scripts/product/viewscripts/input_embedcode.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_embedcode.phtml
@@ -32,7 +32,7 @@
                   rows="3"
                   cols="30"
                   style="padding: 0;"
-                  placeholder='<iframe src="https://www.youtube.com/embed/m1LtJg0SjnE?ecver=2" style="position:absolute;width:641px;height:360px;left:0" width="641" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>'
+                  placeholder='<iframe src="https://www.youtube.com/embed/XXXXXXXX" style="position:absolute;width:641px;height:360px;left:0" width="641" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>'
                   id="<?= $this->escape($this->element->getName()) ?>"
                   name="<?= $this->escape($this->element->getName()) ?>"><?= $this->escape($this->element->getValue()) ?></textarea>
         <?php if ($this->element->getMessages()) {
