--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1731,7 +1731,8 @@ ul.meta-nav-top
         div.projectdetailRating{
           float: right; 
           width:150px; 
-          z-index: 100
+          z-index: 100;
+          clear: right;
         }
         div.projectdtailHeart{
             float: right;           
@@ -5514,7 +5515,7 @@ img.imgpopover
 
 /*aboutme tab comments*/
 #my-comments-tabs-content {
-  font-size: 10pt;
+  font-size: 11pt;
   .rownomargin
   {
     margin:0;
@@ -5531,13 +5532,13 @@ img.imgpopover
   .createat
   {
     font-size: smaller;
-    padding-left: 20px;
+    color: #888;
   }
   .productrow
        {
          padding-bottom: 5px;
          padding-top: 5px;
-         border-bottom: 1px solid #ccd4d8;
+         border-top: 1px solid #ccd4d8;
          width: 60%;
      }
    .productrow:last-child {
