--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1718,6 +1718,24 @@ ul.meta-nav-top
         padding-left: 30px;
         min-height:105px;
         padding-top: 20px;
+        display: flex;
+        .product-title{
+              flex:0 0 80%;
+              font-size: 25px;
+              color: #2673b0; 
+              font-weight: bold;
+              padding-bottom: 15px;
+        }
+        .product-title-right{
+            flex:1;
+        }
+        img.logo {
+            max-height: 85px;
+            max-width: 85px;
+            float: left;
+            padding-right: 15px;
+            border-radius: 0px;
+        }
         .product-logo-container {
           float: left; 
           width: 95px;           
