Rename Settings Payment Tab

--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -73,7 +73,7 @@ $this->tab = 'settings';
                             <li>
                                 <a href="#form-payment-panel" data-toggle="tab">
                                     <span class="glyphicon glyphicon-usd"></span>
-                                    <?= $this->translate('Payment') ?>
+                                    <?= $this->translate('Pling-Payments') ?>
                                 </a>
                             </li>
 
