--- a/application/modules/default/views/scripts/settings/partials/payment.phtml
+++ b/application/modules/default/views/scripts/settings/partials/payment.phtml
@@ -59,12 +59,16 @@
                     <?= $this->paymentform->paypal_mail->setAttrib('tabindex', 24) ?>
                 </div>
             </div>
+            <?php /**
             <br/>
             <div class="row">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                     <?= $this->paymentform->wallet_address->setAttrib('tabindex', 25)->setAttrib('pattern', '^[13][a-km-zA-HJ-NP-Z1-9]{25,34}$') ?>
                 </div>
             </div>
+             * 
+             */?>
+            
             <?php /* 
             <div class="row margin-top-15">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
